test/tests/compiler/8_loops/invalid_parse/plx1_loop_post_no_block_1.plx
pub fn main(none) i32 {
    loop i: i32 = 0 while i < 10 .. i = i + 1 return 0
}
